--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
-p {
-  color: black;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  background-color: black;
 }
