--- a/frontend/src/components/envie/Wish.css
+++ b/frontend/src/components/envie/Wish.css
@@ -5,6 +5,7 @@
   padding: 10px;
   border: 0;
   border-radius: 2px;
+  width: 100%;
 }
 
 .wish-description {
@@ -12,4 +13,17 @@
   color: black;
   text-transform: uppercase;
   font-style: italic;
+  font-family: "Barlow Condensed", 400, sans-serif;
+  font-size: 1.2em;
+}
+
+@media screen and (min-width: 768px) {
+  .button-wish {
+    height: 15vh;
+    width: 25vw;
+  }
+  .wish-description {
+    font-size: 2em;
+    font-family: "Barlow Condensed", sans-serif;
+  }
 }
