--- a/frontend/src/pages/pagewish/PageWish.css
+++ b/frontend/src/pages/pagewish/PageWish.css
@@ -1,11 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,900;1,400;1,900&display=swap");
+
+:root {
+  --margin-button: 0px 10px;
+}
+
 .wish-title {
   color: var(--second-color);
   height: 30vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  font-family: "Barlow Condensed", sans-serif;
   padding-bottom: 50px;
-  font-size: 30px;
+  font-size: 2em;
   text-align: center;
   text-transform: uppercase;
   font-weight: 600;
@@ -18,30 +25,68 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 30px;
   height: 80%;
+  width: 100vw;
 }
 
 .div1 {
   grid-area: 1 / 1 / 2 / 3;
-  margin-left: 20px;
+  margin: var(--margin-button);
 }
 .div2 {
   grid-area: 1 / 3 / 2 / 5;
-  margin-right: 20px;
+  margin: var(--margin-button);
 }
 .div3 {
   grid-area: 2 / 2 / 3 / 4;
+  margin: var(--margin-button);
 }
 .div4 {
   grid-area: 3 / 1 / 4 / 3;
-  margin-left: 20px;
+  margin: var(--margin-button);
 }
 .div5 {
   grid-area: 3 / 3 / 4 / 5;
-  margin-right: 20px;
+  margin: var(--margin-button);
 }
 .div6 {
   grid-area: 4 / 2 / 5 / 4;
+  margin: var(--margin-button);
+}
+
+@media screen and (min-width: 768px) {
+  .wishes-full {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    height: 100%;
+    width: 100%;
+    text-align: center;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .div3 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .div4 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div5 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .div6 {
+    grid-area: 2 / 3 / 3 / 4;
+  }
+
+  .wish-title {
+    height: 40vh;
+    align-items: center;
+    font-size: 3em;
+    font-style: italic;
+  }
 }
