--- a/frontend/src/components/envie/Wish.css
+++ b/frontend/src/components/envie/Wish.css
@@ -13,7 +13,7 @@
   color: black;
   text-transform: uppercase;
   font-style: italic;
-  font-family: "Barlow Condensed", 400, sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   font-size: 1.2em;
 }
 
