--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
-  background-color: black;
+  background-color: grey;
 }
 
 :root {
