--- a/frontend/src/pages/carousel/PageFilm.css
+++ b/frontend/src/pages/carousel/PageFilm.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,900;1,400;1,900&display=swap");
+* {
+  background: black;
+}
+
 #app {
   height: 100%;
 }
@@ -8,10 +13,10 @@ body {
 }
 
 body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  background: black;
+  font-family: "Barlow Condensed", sans-serif;
   font-size: 14px;
-  color: #000;
+
   margin: 0;
   padding: 0;
 }
@@ -24,7 +29,6 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
 
   /* Center slide text vertically */
   display: flex;
@@ -34,7 +38,14 @@ body {
 
 .swiper-slide img {
   display: block;
-  width: 50%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
+  border: 1px solid white;
+}
+
+.genre-title {
+  background: var(--primary-color);
+  display: flex;
+  width: 50%;
 }
