Commit Css mask page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+}
+
+.body {
   background-color: black;
 }
 
@@ -13,6 +16,7 @@
 }
 */
 
-.Page2images {
+/*.Page2images {
   height: 6rem;
 }
+*/
