--- a/frontend/src/pages/pagesMask/PageMask.css
+++ b/frontend/src/pages/pagesMask/PageMask.css
@@ -27,3 +27,35 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+  .mask-full {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .div3 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div4 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  .titre-mask {
+    font-size: 38px;
+    margin-bottom: 15px;
+  }
+
+  .mask-description {
+    font-size: 30px;
+  }
+}
