--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -88,6 +88,7 @@ header{
   justify-content: flex-end;
   align-items: center;
 }
+ 
 
   nav{
     padding: 0;
@@ -98,12 +99,15 @@ header{
  nav{
     position: absolute;
     flex-direction: column;
-   background-color: white;
     width: 100%;
     height: 100vh;
      justify-content: center;
     background-color: rgba(35, 32, 32, 0.2);
     align-items: center;
+  -webkit-backdrop-filter: blur(5px);
+   -moz-backdrop-filter: blur(5px);
+  -o-backdrop-filter: blur(5px);
+  -ms-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     top:5px;
    
@@ -111,6 +115,8 @@ header{
     
   
   }
+
+
 
 
   .list-items{
@@ -151,12 +157,12 @@ header{
 }
 
 .burger-bar.clicked:nth-child(2){
-    transform: scale(0.1);
+    transform: scale(0);
     transition: ease-out 0.5s;
 }
 
 .burger-bar.clicked:nth-child(3){
-    transform: rotate(135deg) translate(-0.5em, 1em);
+    transform: rotate(135deg) translate(-0.75em, 1.22em);
     transition: ease-out 0.5s;
 }
 
