--- a/frontend/src/pages/carousel/PageFilm.css
+++ b/frontend/src/pages/carousel/PageFilm.css
@@ -48,4 +48,16 @@ body {
   background: var(--primary-color);
   display: flex;
   width: 50%;
+  margin: 3%;
+  padding: auto;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  font-size: 5vw;
+  padding-left: 2%;
+}
+
+@media screen and (min-width: 768px) {
+  .genre-title {
+    font-size: 2vw;
+  }
 }
