--- a/frontend/src/components/banner/Banner.css
+++ b/frontend/src/components/banner/Banner.css
@@ -4,8 +4,6 @@
   flex-direction: column;
 }
 
-/* .backdrop-img {
-} */
 .item-overview {
   color: white;
   width: 70%;
@@ -15,26 +13,33 @@
 }
 
 .item-title {
+  display: flex;
+  justify-content: center;
   color: white;
   left: 30%;
-  font-size: 6vw;
-  align-items: center;
+  font-size: 5vw;
+  align-items: flex-start;
   text-align: center;
-  display: flex;
+  width: 100%;
+  height: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  text-transform: uppercase;
+  font-family: "Barlow Condensed", sans-serif;
+  font-style: italic;
 }
-/* .item-description-container {
-} */
+
 .image-title-container {
   display: flex;
-  position: relative;
-  background-color: rgba(240, 248, 255, 0.942);
 }
 
 .synopsis-title {
   color: var(--primary-color);
   font-size: 10vw;
   text-transform: uppercase;
+  font-style: italic;
 }
+
 .synopsis-container {
   display: flex;
   flex-direction: column;
@@ -43,14 +48,26 @@
 }
 .poster-img-container {
   width: 30%;
-  border: 1px solid white;
 }
 
 .poster-img {
   width: 100%;
+  position: relative;
+  border: 1px solid white;
+  bottom: 30%;
+  left: 20%;
+  padding-left: 0;
 }
 
 .backdrop-img {
-  display: flex;
-  position: absolute;
+  width: 100%;
+}
+
+.line {
+  width: 100%;
+  height: 10%;
+  background-color: white;
+}
+.item-title-container {
+  width: 100%;
 }
