--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,20 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,900&family=Inter:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,900&family=Inter:wght@400;600;700&display=swap");
 
-
-  *{
- margin: 0;
-  padding :0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  }
+}
 body {
- 
- font-family: 'Barlow Condensed', sans-serif;
-font-family: 'Inter', sans-serif;
-background-color: black;
-color:#fcd24f
+  font-family: "Barlow Condensed", sans-serif;
+  font-family: "Inter", sans-serif;
+  background-color: black;
+  color: #fcd24f;
 }
 
-.items{
+.items {
   list-style-type: none;
   text-decoration: none;
   font-size: 20px;
@@ -22,153 +20,136 @@ color:#fcd24f
   color: #fcd24f;
   font-style: italic;
   text-transform: uppercase;
- margin-right: 30px;
-  
+  margin-right: 30px;
 }
 
-.logo-navbar{
+.logo-navbar {
   width: 100px;
   height: 100px;
-
 }
 
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
-  
-
 }
 
-.list-items{
+.list-items {
   display: flex;
   align-items: center;
-
 }
 
-.items.active{
+.items.active {
   text-decoration: underline;
-  color:#fcd24f;
+  color: #fcd24f;
 }
 
-.toggle-mobile{
+.toggle-mobile {
   width: 60px;
   height: 60px;
- position: absolute;
- top :20px;
- right: 35px;
- display: none;
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  display: none;
 }
 
-.logo-container{
+.logo-container {
   display: flex;
-  gap:5px;
+  gap: 5px;
 }
-.logo-container{
+.logo-container {
   align-items: center;
-
 }
 
-.logo-title{
-   font-size: 20px;
+.logo-title {
+  font-size: 20px;
   font-weight: 900;
   color: #fcd24f;
   font-style: italic;
-  letter-spacing:0.5px;
- text-transform: uppercase;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
 
+@media screen and (max-width: 940px) {
+  header {
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+   
+  }
 
-
-@media screen and (max-width:940px) {
-
-header{
-  height: 100px;
-  display : flex;
-  justify-content: flex-end;
-  align-items: center;
-}
- 
-
-  nav{
+  nav {
     padding: 0;
   }
-  .toggle-mobile{
-    display:block;
+  .toggle-mobile {
+    display: block;
   }
- nav{
+  nav {
     position: absolute;
     flex-direction: column;
     width: 100%;
     height: 100vh;
-     justify-content: center;
+    justify-content: center;
     background-color: rgba(35, 32, 32, 0.2);
     align-items: center;
-  -webkit-backdrop-filter: blur(5px);
-   -moz-backdrop-filter: blur(5px);
-  -o-backdrop-filter: blur(5px);
-  -ms-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-    top:5px;
-   
-   
-    
-  
+    -webkit-backdrop-filter: blur(50px);
+    -moz-backdrop-filter: blur(50px);
+    -o-backdrop-filter: blur(50px);
+    -ms-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
+    top: 0px;
   }
 
-
-
-
-  .list-items{
+  .list-items {
     flex-direction: column;
   }
-  
-  .items{
-    margin :35px 0 ;
+
+  .items {
+    margin: 35px 0;
     text-align: center;
+    text-shadow: 1px 1px 1px #fcd24f, 0 0 black;
   }
 
-  .logo-title{
-    display:none;
+  .logo-title {
+    display: none;
   }
 
-.burger-bar-container{
-  height: 50%;
+  .burger-bar-container {
+    height: 50%;
     width: 4em;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     cursor: pointer;
-    margin:15px;
-}
+    margin: 15px;
+  }
 
   .burger-bar {
     width: 4em;
     height: 0.3em;
     background-color: yellow;
     border-radius: 0.5em;
-    
   }
 
-  .burger-bar.clicked:nth-child(1){
+  .burger-bar.clicked:nth-child(1) {
     transform: rotate(45deg) translate(0.75em, 1.25em);
     transition: ease-out 0.5s;
-}
+  }
 
-.burger-bar.clicked:nth-child(2){
+  .burger-bar.clicked:nth-child(2) {
     transform: scale(0);
     transition: ease-out 0.5s;
-}
+  }
 
-.burger-bar.clicked:nth-child(3){
+  .burger-bar.clicked:nth-child(3) {
     transform: rotate(135deg) translate(-0.75em, 1.22em);
     transition: ease-out 0.5s;
-}
+  }
 
-.burger-bar.unclicked {
+  .burger-bar.unclicked {
     transform: rotate(0) translate(0);
     transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
-}
-
+  }
 }
