--- a/frontend/src/components/banner/Banner.css
+++ b/frontend/src/components/banner/Banner.css
@@ -91,6 +91,25 @@
   margin: 10%;
 }
 
+/* ------------------- Vidéo youtube --------------------- */
+.video-container iframe {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  width: 100%;
+  height: 50%;
+  border: 1px white solid;
+}
+
+.video-container {
+  position: absolute;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio   */
+  height: 0;
+
+  width: 60%;
+  height: 30%;
+}
+
 @media screen and (min-width: 768px) {
   .item-title {
     font-size: 2vw;
