--- a/frontend/src/components/plateform/Plateform.css
+++ b/frontend/src/components/plateform/Plateform.css
@@ -14,8 +14,17 @@
 }
 
 .no-plateform {
-  display: flex;
+  color: white;
   width: 100%;
-  text-align: center;
+  font-size: 5vw;
+  text-align: justify;
+  padding-top: 3%;
+  display: flex;
   justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .no-plateform {
+    font-size: 1.8vw;
+  }
 }
