--- a/frontend/src/pages/carousel/PageFilm.css
+++ b/frontend/src/pages/carousel/PageFilm.css
@@ -55,8 +55,17 @@ body {
   color: black;
 }
 
+.carousel-container {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (min-width: 768px) {
   .genre-title {
     font-size: 2vw;
+  }
+  .swiper-slide .swiper-zoom-container:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s linear;
   }
 }
