addin trailer in video and rating infos

--- a/frontend/src/components/banner/Banner.css
+++ b/frontend/src/components/banner/Banner.css
@@ -109,6 +109,10 @@
   margin: 5vh;
   font-size: 5vw;
 }
+
+.vote-average {
+  text-transform: uppercase;
+}
 /* ------------------- Vidéo youtube --------------------- */
 .video-container iframe {
   position: absolute;
