--- a/frontend/src/pages/carousel/PageFilm.css
+++ b/frontend/src/pages/carousel/PageFilm.css
@@ -43,9 +43,11 @@ body {
 }
 
 .genre-title {
-  background: var(--primary-color);
+  background-image: url("../../assets/arrow_title.png");
   display: flex;
-  width: 50%;
+  justify-content: flex-start;
+  align-items: center;
+  width: 262px;
   margin: 3%;
   padding: auto;
   padding-bottom: 1%;
@@ -53,7 +55,9 @@ body {
   font-size: 5vw;
   padding-left: 2%;
   color: black;
+  height: 50px;
 }
+
 
 @media screen and (min-width: 768px) {
   .genre-title {
