--- a/frontend/src/components/carousel/Carousel.css
+++ b/frontend/src/components/carousel/Carousel.css
@@ -20,5 +20,11 @@
   margin-top: 1%;
   text-transform: uppercase;
 
-  font-size: 1.2vw;
+  font-size: 4vw;
+}
+
+@media screen and (min-width: 768px) {
+  .page-number {
+    font-size: 1.2vw;
+  }
 }
