--- a/frontend/src/components/plateformChoice/PlateformChoice.css
+++ b/frontend/src/components/plateformChoice/PlateformChoice.css
@@ -26,6 +26,11 @@
 
 @media screen and (max-width: 768px) {
   .button-plateform {
-    font-size: 2vw;
+    font-size: 2.5vw;
   }
+}
+
+.selected {
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.5);
 }
