--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: "Barlow Condensed", sans-serif;
   font-family: "Inter", sans-serif;
@@ -13,8 +12,7 @@ body {
   color: #fcd24f;
 }
 
-.items,
-.small-items {
+.items {
   list-style-type: none;
   text-decoration: none;
   font-size: 20px;
@@ -24,6 +22,10 @@ body {
   text-transform: uppercase;
   margin-right: 30px;
   cursor: pointer;
+}
+
+.stylemasknav {
+  width: 50px;
 }
 
 .logo-navbar {
@@ -60,7 +62,6 @@ nav {
   display: flex;
   gap: 5px;
 }
-
 .logo-container {
   align-items: center;
 }
@@ -81,10 +82,9 @@ nav {
   margin: 30px; */
 }
 
-.menu li {
+/* .menu li {
   float: left;
-  width: 100%;
-}
+} */
 
 .menu li:link,
 .menu li:visited {
@@ -138,7 +138,7 @@ nav {
   background-color: #808080;
 }
 
-.menu .sousmenu li:hover {
+.menu .sousmenu li a:hover {
   background-color: #199bd2;
   cursor: pointer;
 }
@@ -146,6 +146,13 @@ nav {
 .menu li:hover .sousmenu {
   display: block;
 }
+
+/* NavBar Sous menu Masque*/
+.maskhumeurs {
+  width: 50px;
+}
+
+/* NavBar Sous menu Masque*/
 
 @media screen and (max-width: 940px) {
   header {
@@ -158,13 +165,11 @@ nav {
   nav {
     padding: 0;
   }
-
   .toggle-mobile {
     display: block;
   }
-
   nav {
-    position: absolute;
+    position: fixed;
     flex-direction: column;
     width: 100%;
     height: 100vh;
@@ -186,18 +191,37 @@ nav {
   }
 
   .items {
-    margin: 35px 0;
+    margin: 60px 0;
+    /* margin: 35% 0; */
     text-align: center;
     text-shadow: 1px 1px 1px #fcd24f, 0 0 black;
+
+    /* padding-right: -5%; */
   }
 
-  .menu .sousmenu {
-    bottom: 120px;
-    left: 140px;
+  .menu .sousmenu-humeurs {
+    /* bottom: 120px;
+    left: 140px; */
+    left: 0px;
+
+    top: 100px;
     width: 115px;
     font-size: 14px;
-
     border-radius: 0 5px 5px 0;
+
+    /* position: absolute; */
+  }
+
+  .menu .sousmenu-wish {
+    /* bottom: 120px; */
+    /* left: 100px; */
+    bottom: 180px;
+    width: 115px;
+    font-size: 14px;
+    border-radius: 0 5px 5px 0;
+
+    position: fixed;
+    /* position: absolute; */
   }
 
   .logo-title {
