--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -76,15 +76,8 @@ nav {
 }
 
 .menu {
-  /* height: 60px; */
   list-style: none;
-  /* padding: 10px;
-  margin: 30px; */
 }
-
-/* .menu li {
-  float: left;
-} */
 
 .menu li:link,
 .menu li:visited {
@@ -170,8 +163,9 @@ nav {
   }
   nav {
     position: fixed;
+    object-fit: cover;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     justify-content: center;
     background-color: rgba(35, 32, 32, 0.2);
@@ -191,37 +185,29 @@ nav {
   }
 
   .items {
-    margin: 60px 0;
-    /* margin: 35% 0; */
+    margin: 50px 0;
+
     text-align: center;
     text-shadow: 1px 1px 1px #fcd24f, 0 0 black;
-
-    /* padding-right: -5%; */
   }
 
   .menu .sousmenu-humeurs {
-    /* bottom: 120px;
-    left: 140px; */
-    left: 0px;
+    right: 30%;
 
     top: 100px;
     width: 115px;
     font-size: 14px;
     border-radius: 0 5px 5px 0;
-
-    /* position: absolute; */
+    position: absolute;
   }
 
   .menu .sousmenu-wish {
-    /* bottom: 120px; */
-    /* left: 100px; */
-    bottom: 180px;
+    bottom: 75px;
     width: 115px;
     font-size: 14px;
     border-radius: 0 5px 5px 0;
 
-    position: fixed;
-    /* position: absolute; */
+    position: absolute;
   }
 
   .logo-title {
