footer and page contact done

--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -3,12 +3,20 @@ footer {
   background: #000;
   scroll-behavior: smooth;
 }
-
-.footer-section-logo {
-  width: 100%;
+#footer-section {
   display: flex;
-  justify-content: center;
+  flex-direction: row-reverse;
+  width: 60%;
+  align-items: center;
+  justify-content: space-around;
 }
+
+.contact-footer-container {
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+}
+
 .footer-section-logo img {
   margin: 0 auto;
   width: 350px;
@@ -16,9 +24,7 @@ footer {
 }
 
 .footer_socials {
-  width: 100%;
   display: flex;
-  justify-content: center;
 }
 
 .footer_socials a {
@@ -68,14 +74,6 @@ footer {
   text-align: center;
   color: rgb(255, 255, 255);
   font-family: "Barlow Condensed", sans-serif;
-  align-items: flex-end;
-}
-
-.footer_copyright {
-  text-align: center;
-  color: rgb(255, 255, 255);
-  font-family: "Barlow Condensed", sans-serif;
-  align-items: flex-end;
 }
 
 @media (max-width: 940px) {
@@ -84,9 +82,12 @@ footer {
     padding: 0 50px;
   }
 
+  #footer-section {
+    flex-direction: column;
+  }
   .footer_contactemail {
     font-size: 14px;
-    justify-content: center;
+    padding-top: 10%;
   }
 
   .footer_copyright {
@@ -99,7 +100,8 @@ footer {
   }
 
   .footer-section-logo img {
-    width: 65%;
+    width: 100%;
     justify-content: center;
+    padding: 0 2%;
   }
 }
