--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -103,6 +103,7 @@ nav {
   padding: 0;
   margin: 0;
   position: absolute;
+  right: 10%;
   list-style-type: none;
   text-decoration: none;
   font-size: 20px;
@@ -113,6 +114,7 @@ nav {
   margin-right: 30px;
   cursor: pointer;
   font-size: 16px;
+  z-index: 999;
 }
 
 .menu .sousmenu li {
