--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -97,13 +97,16 @@ nav {
   background-color: #808080;
 }
 
+.menu .sousmenu-wish {
+  right: 5%;
+}
 .menu .sousmenu {
   list-style-type: none;
   display: none;
   padding: 0;
   margin: 0;
   position: absolute;
-  right: 10%;
+
   list-style-type: none;
   text-decoration: none;
   font-size: 20px;
