delete apple tv and google video from plateform cuz obsolete

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -209,7 +209,7 @@ nav {
 
   .menu .sousmenu-wish {
     bottom: 75px;
-    width: 115px;
+    width: auto;
     font-size: 14px;
     border-radius: 0 5px 5px 0;
 
